# MToolkitGPU

./: .gitignore  CMakeLists.txt  MTools.py  README.md  compile.sh  test.ipynb  test.py
src/: matrix_data_init.f90  matrix_data_module.f90  matrix_main.f90  matrix_ops.f90
